--- a/BLRF/vignettes/blrf-vignette.Rmd
+++ b/BLRF/vignettes/blrf-vignette.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "blrf-vignette"
+title: "Introduction to BLRF"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{blrf-vignette}
+  %\VignetteIndexEntry{Introduction to BLRF}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 ```{r, include = FALSE}
@@ -20,17 +20,33 @@ library(BLRF)
 
 ### 1.1 Introduction to BLRF
 
-#####  This library combines bag of Little Bootstraps, also known as BLB, to replace the process of ordinary bootstrapping in the standard Random Forest algorithm in order to gain more robustness in prediction for random forest classification as well as regression. 
+* This library combines bag of Little Bootstraps, also known as BLB, to replace the process of ordinary bootstrapping in the standard Random Forest algorithm in order to gain more robustness in prediction for random forest classification as well as regression. 
 
-### 1.2 Main Method in the library(BLRF)
+* Like its name implies, there are a large number of individual decision trees involved in the random forest. The trees work as an ensemble. Each individual tree in the random forest returns a prediction. Finally, the model’s prediction is determined by the most votes of all decision trees. 
+
+* Regarding to ordinary random forest, say we have a training set of size N. Each individual tree randomly takes a random sample of size N with replacement. Through,  ordinary bootstrapping is a powerful tool for approximating quantities, the method’s reliance on repeated resampling make it computationally intensive and ill-suited for extremely large date  sets. Thus we introduce the Bag of Little Bootstraps (BLB) as an alternative approximation. The Bag of Little Bootstraps (BLB) implements a different way to bagging. BLB combines features of the bootstrap and subsampling to form a resampling method well-suited for computations on large data sets while maintaining the favorable statistical properties of the bootstrap (Kleiner et al., 2014).
+
+### 1.2 Internal functions (hidden functions) shipped within this library
+
+| function name   | Description                                                      | Return value      |
+|-----------------|------------------------------------------------------------------|-------------------|
+|`subsampling()`   | Sampling original data into s subsamples without replacement    | list of subsamples|
+|`weights()`     | Calculate weights of each observation in subsample                | matrix of weights |
+|`one_tree()`     | Implement random forest once and return a one_tree object        | one_tree object   |
+|`one_tree_predict()` | Make predictions on one tree                                 | prediction        |
+|`tree_implement()` | Build Little Random Forest (LRS) for one subsample          | LRS               |
+|`Confusion_one_tree()` | Calculate confusion matrix for each response variable for one tree| confusion_matrix|
+
+
+### 1.3 Main Method in the library(BLRF)
 
 * The method of `brlf()` function implements little random forests on the trainning dataset, returns a `brlf` object. 
 
 * function `brlf()` : main parameters included in the function
 
-| Parameter       | Definition in BLRF                               |
-|-----------------|--------------------------------------------------|
-| n               | Size of training data set                        | 
+| Parameter       | Definition in BLRF                                          |
+|-----------------|-------------------------------------------------------------|
+| n               | Size of training data set                                 | 
 | $\gamma$        | The user-defined sizing factor that determinses value of b | 
 | s               | Total number of Little Random Forests             | 
 | b               | Number of distinct observations in each Little Forest, $b = n^{\gamma}$| 
@@ -39,12 +55,31 @@ library(BLRF)
 | core            | Number of core to use for parallel computing | 
 
 * `brlf` object
-  * when implement on random forest regression ,`brlf` object includes:  `Tree_object$Trees`,`Tree_object$fitted_prob`,`Tree_object$fitted_label`,`Tree_object$accuracy_ci` 
+  + when implement on random forest regression ,`brlf` object includes:    `Tree_object$Trees`,`Tree_object$fitted_prob`,`Tree_object$fitted_label`,`Tree_object$accuracy_ci`
   
-  * when implement on random forest classification ,`brlf` object includes: 
+  + when implement on random forest classification ,`brlf` object includes:   
   `Tree_object$Trees`, `Tree_object$fitted`, `Tree_object$residuals`
   
+### 1.4 Make predictions and confidence intervals for statistical properties
 
+  * Random forest could be applied in both solving classification and regression problems. It operates by constructing a multitude of decision trees at training time and outputting the class that is the mode of the classes (classification) or mean prediction (regression) of the individual trees. We implement methods so that to meet the requirements of different problem solving targets.
+  
+  + Classification
+     
+      | function name   | Description                                                      | 
+      |-----------------|------------------------------------------------------------------|
+      |`prediction_tree_categorical()`| Make prediction with list of trees with given type (label or probability) of calculating the prediction    | 
+      |`predict_ci_classification()`     | Get Percentile confidence Intervals for probabilities of Classification Prediction              | 
+      |`accuracy_mean_ci()`     | Calculate overall average accuracy and the confidence interval of accuracy aggreating all Trees       | 
+
+  + Reregssion
+  
+      | function name   | Description                                                      | 
+      |-----------------|------------------------------------------------------------------|
+      |`prediction_tree_regression()`| Make prediction with list of trees for regression    | 
+      |`predict_ci_regression()`     | Get Percentile Confidence Intervals for values of Regression Prediction  |
+
+  
 ### 2.1 Example of Little Random Forest Classification
 
 #### The following section describes how to use the library for random forest classification problem.
